# SeriousSamClassic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build-appimage.sh  build-linux32demo.sh  build-linux64demo.sh
SamTFE/Sources/: CMakeLists.txt  SamTFE.sln  build-linux32.sh  build-linux32xplus.sh  build-linux64.sh  build-linux64xplus.sh  build-macarm.sh
SamTFE/Sources/DecodeReport/: DecodeReport.vcxproj  DecodeReport.vcxproj.filters
SamTFE/Sources/DedicatedServer/: DedicatedServer.rc  DedicatedServer.vcxproj  ReadMe.txt
SamTFE/Sources/Depend/: Depend.vcxproj  Dependency.cpp  UtilityDepend.cpp
SamTFE/Sources/Ecc/: Ecc.vcxproj  Ecc.vcxproj.filters  Main.cpp  Parser.y  Scanner.l  StdH.h  parser.h
SamTFE/Sources/Engine/: Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  StdH.h  Types.h
SamTFE/Sources/Engine/Base/: Anim.cpp  Assert.h  Base.h  CRC.h  CTString.cpp  CTString.h  CTString.inl  Console.cpp  ErrorReporting.cpp  ListIterator.inl  Lists.inl  Memory.cpp  NullSynchronization.cpp  Parser.cpp  Parser.hpp  Parser.y  Priority.inl  Profiling.cpp  ReplaceFile.cpp  Scanner.l  Shell.cpp  Stream.cpp  Stream.h  Synchronization.h  Timer.cpp  Timer.h  Timer.inl  Types.h  Unzip.cpp
SamTFE/Sources/Engine/Base/SDL/: SDLEvents.cpp  SDLEvents.h  SDLInput.cpp  SDLSynchronization.cpp  SDLTimer.cpp
SamTFE/Sources/Engine/Base/Unix/: UnixDynamicLoader.cpp  UnixFileSystem.cpp  UnixSynchronization.cpp  UnixSynchronization.h
SamTFE/Sources/Engine/Base/Win32/: Win32FileSystem.cpp  Win32Input.cpp
SamTFE/Sources/Engine/Brushes/: Brush.h  BrushArchive.cpp  BrushIO.cpp  BrushShadows.cpp  BrushTriangularize.cpp
SamTFE/Sources/Engine/Entities/: Entity.cpp  EntityClass.cpp  EntityCopying.cpp
SamTFE/Sources/Engine/GameAgent/: GameAgent.cpp
SamTFE/Sources/Engine/Graphics/: Adapter.cpp  DrawPort.cpp  DrawPort_RenderScene.cpp  Font.cpp  GfxLibrary.cpp  GfxLibrary.cpp.orig  Gfx_Direct3D.cpp  Gfx_OpenGL.cpp  Gfx_OpenGL.h  Gfx_OpenGL_Textures.cpp  Gfx_wrapper.cpp  Gfx_wrapper.cpp.orig  OpenGL.h  Shader.cpp  ShadowMap.cpp  TextureEffects.cpp  Vertex.h  ViewPort.h
SamTFE/Sources/Engine/Light/: LayerMixer.cpp  LightSource.cpp
SamTFE/Sources/Engine/Math/: Clipping.inl  Functions.h  Geometry.inl  ObjectSector.cpp  Projection_Perspective.cpp
SamTFE/Sources/Engine/Models/: Model.cpp  RenderModel_View.cpp
SamTFE/Sources/Engine/Network/: Buffer.cpp  CPacket.cpp  CommunicationInterface.cpp  Compression.cpp  MessageDispatcher.cpp  Network.cpp  PlayerSource.cpp  PlayerTarget.cpp  Server.cpp
SamTFE/Sources/Engine/Rendering/: RenderAdding.cpp  RenderModels.cpp  Render_internal.h
SamTFE/Sources/Engine/Ska/: ModelInstance.cpp  RMRender.cpp  smcFlex.skl  smcPars.hpp  smcScan.cpp  smcScan.l
SamTFE/Sources/Engine/Sound/: SoundDecoder.cpp  SoundLibrary.cpp
SamTFE/Sources/Engine/Templates/: BSP.cpp  DynamicContainer.cpp  DynamicContainer.h
SamTFE/Sources/Engine/Terrain/: Terrain.cpp  TerrainEditing.cpp  TerrainMisc.cpp  TerrainRayCasting.cpp  TerrainRender.cpp
SamTFE/Sources/Engine/World/: WorldCollisionGrid.cpp  WorldIO.cpp  WorldRayCasting.cpp
SamTFE/Sources/EngineGui/: EngineGUI.vcxproj  EngineGUI.vcxproj.filters  WndDisplayTexture.cpp
SamTFE/Sources/Entities/: Beast.es  BigHead.es  Boneman.es  Camera.es  Catman.es  Cyborg.es  Debris.es  Dragonman.es  EffectMarker.es  Effector.es  EnemyCounter.es  EnvironmentMarker.es  Fishman.es  Item.es  LastFileID.txt  Lightning.es  Mamutman.es  Mantaman.es  ModelDestruction.es  ModelHolder2.es  MusicHolder.es  Player.es  PlayerAnimator.es  PlayerWeapons.es  PlayerWeaponsEffects.es  PlayerWeapons_old.es  Projectile.es  StormController.es  Watcher.es  Woman.es  WorldBase.es
SamTFE/Sources/Entities/Common/: Common.cpp  HUD.cpp  LightFixes.h  Particles.cpp  PathFinding.cpp
SamTFE/Sources/EntitiesMP/: AirElemental.es  Fish.es  Player.es  PlayerWeapons.es  PlayerWeaponsHD.es  PlayerWeapons_old.es  Summoner.es  WorldBase.es
SamTFE/Sources/EntitiesMP/Common/: HUD.cpp  Particles.cpp
SamTFE/Sources/GameGUIMP/: DlgConsole.cpp  DlgPlayerControls.cpp  DlgPlayerSettings.cpp  GameGUI.clw  GameGUI.rc  GameGUI.vcxproj  GameGUI.vcxproj.filters  ReadMe.txt
SamTFE/Sources/GameGUIMP/res/: Game.rc2
SamTFE/Sources/GameMP/: CompMessage.cpp  Computer.cpp  Console.cpp  Game.cpp  Game.vcxproj  LoadingHook.cpp  Map.cpp
SamTFE/Sources/LWSkaExporter/: LWSkaExporter.vcxproj
SamTFE/Sources/MakeFONT/: MakeFONT.cpp  MakeFONT.vcxproj.filters
SamTFE/Sources/Modeler/: ColoredButton.cpp  Modeler.cpp  Modeler.vcxproj  Modeler.vcxproj.filters  ModelerView.cpp
SamTFE/Sources/Modeler/hlp/: Modeler.cnt  Modeler.hpj
SamTFE/Sources/Modeler/res/: Modeler.rc2
SamTFE/Sources/RCon/: RCon.vcxproj  RCon.vcxproj.filters  ReadMe.txt
SamTFE/Sources/RCon/res/: RCon.rc2
SamTFE/Sources/SeriousSam/: CmdLine.cpp  GLSettings.cpp  MainWindow.cpp  Menu.cpp  MenuGadgets.cpp  SeriousSam.cpp  SeriousSam.h  SeriousSam.vcxproj  StdH.h  iconvlite.cpp  iconvlite.h
SamTFE/Sources/SeriousSkaStudio/: DlgBarTreeView.cpp  Parser.y  Scanner.l  SeriousSkaStudio.rc  SeriousSkaStudio.vcxproj  SeriousSkaStudio.vcxproj.filters
SamTFE/Sources/SeriousSkaStudio/hlp/: SeriousSkaStudio.hm
SamTFE/Sources/Shaders/: DetailShader.cpp  Shaders.vcxproj.filters
SamTFE/Sources/TEXConv/: TEXConv.cpp  TEXConv.vcxproj
SamTFE/Sources/WorldEditor/: ChildFrm.cpp  ColoredButton.cpp  CustomComboWnd.cpp  DlgBrowseByClass.cpp  DlgPgShadow.cpp  TerrainInterface.cpp  WorldEditor.clw  WorldEditor.vcxproj
SamTFE/Sources/WorldEditor/hlp/: Index.hhk  WorldEditor.hhp
SamTFE/Sources/WorldEditor/res/: WorldEditor.rc2
SamTFE/Sources/amp11lib/: CMakeLists.txt  COPYING  README  amp11lib.h  amp11lib.vcxproj  amp1dec.cpp  amp2dec.cpp  amp3dec.cpp  ampdec.cpp  ampdec.h  mpgsplit.h
SamTFE/Sources/amp11lib/binfile/: binfarc.h  binfcon.cpp  binfhttp.h  binfile.cpp  binfile.h  binfilef.cpp  binfmem.cpp  binfplnt.cpp  binfplnt.h  binfplsb.h  binfstd.cpp  binftcp.h  ptypes.h
SamTFE/Sources/libogg/: libogg_dynamic.vcxproj
SamTFE/Sources/libvorbis/: libvorbis_dynamic.vcxproj  libvorbisfile_dynamic.vcxproj
(+524 files in other folders)
